--- a/Brainwriter/res/layout/activity_main.xml
+++ b/Brainwriter/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
-        android:background="#E60000"
+        android:background="#555555"
         android:paddingBottom="4dp"
         android:paddingTop="4dp"
         android:textColor="#fff" />
