--- a/Brainwriter/res/layout/ideas_list.xml
+++ b/Brainwriter/res/layout/ideas_list.xml
@@ -3,28 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity" >
-    
-      <EditText
-          android:id="@+id/group_name"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_alignParentLeft="true"
-          android:layout_alignParentRight="true"
-          android:layout_alignParentTop="true"
-          android:ems="20" 
-          android:textSize="30sp"
-          >
-
-        <requestFocus />
-    </EditText>
 
     <LinearLayout
         android:id="@+id/ideas_list_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/group_name"
-        android:orientation="horizontal" 
-        >
+        android:orientation="horizontal" >
 
         <ListView
             android:id="@+id/idea_list"
@@ -47,13 +31,11 @@
             android:id="@+id/round"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
+            android:layout_margin="5dp"
             android:gravity="center_horizontal"
             android:text="Publish"
             android:textColor="#FFFFFF"
-            android:textSize="25sp" 
-            android:layout_margin="5dp"
-            />
+            android:textSize="25sp" />
 
     </LinearLayout>
 
