--- a/Brainwriter/res/layout/idea_item.xml
+++ b/Brainwriter/res/layout/idea_item.xml
@@ -13,31 +13,34 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/camera_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/button1"
-        android:layout_alignBottom="@+id/button1"
+        android:layout_alignBaseline="@+id/text_button"
+        android:layout_alignBottom="@+id/text_button"
         android:layout_marginLeft="17dp"
-        android:layout_toRightOf="@+id/button1"
-        android:text="camera" />
+        android:layout_toRightOf="@+id/text_button"
+        android:text="camera"
+        android:background="@drawable/camera_selector"
+         />
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/text_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="49dp"
         android:layout_marginTop="26dp"
         android:layout_toRightOf="@+id/idea_item_layout_1"
-        android:text="text" />
+        android:text="text" 
+        />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/canvas_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/button2"
-        android:layout_alignBottom="@+id/button2"
+        android:layout_alignBaseline="@+id/camera_button"
+        android:layout_alignBottom="@+id/camera_button"
         android:layout_alignParentRight="true"
         android:text="canvas" />
 
