--- a/Brainwriter/res/layout/camera_main.xml
+++ b/Brainwriter/res/layout/camera_main.xml
@@ -24,33 +24,31 @@
             android:layout_centerHorizontal="true"/>
 
     <ImageButton
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:id="@+id/savePhotoButton"
-            android:src="@drawable/accept"
-            android:background="@null"
-            android:contentDescription="Accept"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="60dp"
-            android:maxHeight="@dimen/activity_horizontal_margin"
-            android:maxWidth="@dimen/activity_vertical_margin"
-            android:layout_marginBottom="20dp"/>
+        android:id="@+id/savePhotoButton"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignTop="@+id/retakePhotoButton"
+        android:layout_marginLeft="20dp"
+        android:layout_toRightOf="@+id/retakePhotoButton"
+        android:background="@null"
+        android:contentDescription="Accept"
+        android:maxHeight="@dimen/activity_horizontal_margin"
+        android:maxWidth="@dimen/activity_vertical_margin"
+        android:src="@drawable/accept" />
 
     <ImageButton
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:id="@+id/cancelRequestButton"
-            android:background="@null"
-            android:src="@drawable/decline"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="60dp"
-            android:contentDescription="Close"
-            android:layout_gravity="left"
-            android:maxHeight="@dimen/activity_horizontal_margin"
-            android:maxWidth="@dimen/activity_vertical_margin"
-            android:scaleType="centerCrop"
-            android:layout_marginBottom="20dp"/>
+        android:id="@+id/cancelRequestButton"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_toLeftOf="@+id/retakePhotoButton"
+        android:background="@null"
+        android:contentDescription="Close"
+        android:maxHeight="@dimen/activity_horizontal_margin"
+        android:maxWidth="@dimen/activity_vertical_margin"
+        android:scaleType="centerCrop"
+        android:src="@drawable/decline" />
 
 </RelativeLayout>
