--- a/Brainwriter/res/drawable/camera_gradient.xml
+++ b/Brainwriter/res/drawable/camera_gradient.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
     <item>
-        <bitmap android:src="@drawable/add_group"/>
+        <bitmap android:src="@drawable/camera2"/>
     </item>
     <item>
         <shape xmlns:android="http://schemas.android.com/apk/res/android">
