--- a/Brainwriter/res/layout/create_group_layout.xml
+++ b/Brainwriter/res/layout/create_group_layout.xml
@@ -28,6 +28,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="60dp"
         android:src="@drawable/add_group" 
+        android:contentDescription="@string/default_description"
         android:background="@drawable/add_group_selector"
         />
 
