--- a/Brainwriter/res/layout/ideas_list.xml
+++ b/Brainwriter/res/layout/ideas_list.xml
@@ -19,4 +19,12 @@
 
     </LinearLayout>
 
+    <Button
+        android:id="@+id/btn_submit_ideas"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/ideas_list_layout"
+        android:layout_centerHorizontal="true"
+        android:text="Submit ideas" />
+    
 </RelativeLayout>
