--- a/Brainwriter/res/layout/settings.xml
+++ b/Brainwriter/res/layout/settings.xml
@@ -11,10 +11,10 @@
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:layout_marginTop="25dp"
-            android:hint="Username..."
+            android:hint="@string/username_hint"
             android:maxLines="1"
             android:singleLine="true"
-            android:textSize="30dp" />
+            android:textSize="30sp" />
 
         <ImageButton
             android:id="@+id/save_button"
@@ -24,6 +24,8 @@
             android:layout_alignTop="@+id/username"
             android:layout_marginRight="23dp"
             android:background="@drawable/save_selector"
-            android:src="@drawable/save" />
+            android:src="@drawable/save" 
+            android:contentDescription="@string/default_description"
+            />
 
 </RelativeLayout>
