--- a/Brainwriter/res/layout/settings.xml
+++ b/Brainwriter/res/layout/settings.xml
@@ -6,11 +6,11 @@
 
         <EditText
             android:id="@+id/username"
-            android:layout_width="234dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
             android:layout_marginTop="25dp"
+            android:layout_toLeftOf="@+id/save_button"
             android:hint="@string/username_hint"
             android:maxLines="1"
             android:singleLine="true"
