--- a/Brainwriter/res/layout/group_item.xml
+++ b/Brainwriter/res/layout/group_item.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_below="@+id/timer"
+        android:layout_below="@+id/round"
         android:text="TOTAL: x"
         android:textAppearance="?android:attr/textAppearanceSmall" 
         android:paddingRight="10dp"
@@ -27,7 +27,7 @@
         />
 
     <TextView
-        android:id="@+id/timer"
+        android:id="@+id/round"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
